--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,25 +24,8 @@ Host clydesdale
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
-Host mindblind
-  HostName 127.0.0.1
-  Port 6987
-
-Host mymbp
-  HostName 127.0.0.1
-  Port 7722
-
-Host fedora
-  HostName 127.0.0.1
-  Port 5522
-
-Host librarian
-  HostName 127.0.0.1
-  Port 6622
-
-Host hatter
-  HostName 127.0.0.1
-  Port 4422
+Host neutronium
+  HostName 172.16.16.30
 
 Host ut.eclipsing.com
   ConnectTimeout 8
@@ -53,18 +36,20 @@ Host 172.31.255.1
   ConnectTimeout 888
 
 Host excel-*.rapidnotify.com
-User pairprogramming
+  User pairprogramming
 
 Host *.rapidnotify.com
-User prodrun
+  User prodrun
 
 Host *.vpn.bybent.com
-ConnectTimeout 10
-User root
+  User root
 
 Host nagios.solid-constructs.com
-ConnectTimeout 10
-ForwardAgent yes
+  ForwardAgent yes
+
+Host cracker
+  HostName 172.16.16.34
+  ForwardAgent yes
 
 Host *
   User wwalker
