--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,6 +24,26 @@ Host clydesdale
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
+Host port-neutronium
+  HostName 127.0.0.1
+  Port 2226
+
+Host port-aluminum
+  HostName 127.0.0.1
+  Port 2223
+
+Host port-thermite
+  HostName 127.0.0.1
+  Port 2222
+
+Host port-hatter
+  HostName 127.0.0.1
+  Port 2224
+
+Host port-cracker
+  HostName 127.0.0.1
+  Port 2225
+
 Host neutronium
   HostName 172.16.16.30
 
