--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,25 +24,29 @@ Host clydesdale
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
+Host port-speedy
+  HostName 127.0.0.1
+  Port 8015
+
 Host port-neutronium
   HostName 127.0.0.1
-  Port 2226
+  Port 8013
 
 Host port-aluminum
   HostName 127.0.0.1
-  Port 2223
+  Port 8010
 
 Host port-thermite
   HostName 127.0.0.1
-  Port 2222
+  Port 8011
 
 Host port-hatter
   HostName 127.0.0.1
-  Port 2224
+  Port 8012
 
 Host port-cracker
   HostName 127.0.0.1
-  Port 2225
+  Port 8014
 
 Host neutronium
   HostName 172.16.16.30
