--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,6 +24,30 @@ Host dt
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
+Host port-speedy
+  HostName 127.0.0.1
+  Port 8015
+
+Host port-neutronium
+  HostName 127.0.0.1
+  Port 8013
+
+Host port-aluminum
+  HostName 127.0.0.1
+  Port 8010
+
+Host port-thermite
+  HostName 127.0.0.1
+  Port 8011
+
+Host port-hatter
+  HostName 127.0.0.1
+  Port 8012
+
+Host port-cracker
+  HostName 127.0.0.1
+  Port 8014
+
 Host clydesdale
   HostName 172.18.15.242
 
