add uranium to ports

--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,14 +24,6 @@ Host clydesdale
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
-Host port-speedy
-  HostName 127.0.0.1
-  Port 8015
-
-Host port-neutronium
-  HostName 127.0.0.1
-  Port 8013
-
 Host port-aluminum
   HostName 127.0.0.1
   Port 8010
@@ -44,9 +36,22 @@ Host port-hatter
   HostName 127.0.0.1
   Port 8012
 
+Host port-neutronium
+  HostName 127.0.0.1
+  Port 8013
+
 Host port-cracker
   HostName 127.0.0.1
   Port 8014
+
+Host port-speedy
+  HostName 127.0.0.1
+  Port 8015
+
+Host port-uranium
+  HostName 127.0.0.1
+  Port 8016
+
 
 Host neutronium
   HostName 172.16.16.30
