--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -33,5 +33,7 @@ set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 24
 # vim: ft=tmux
 bind-key L command-prompt 'source-file ~/.tmux.layout_"%%"'
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 set -g default-terminal "screen-256color"
