--- a/common/.i3/config
+++ b/common/.i3/config
@@ -118,7 +118,7 @@ set $workspace0 "  0   "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
+bindsym $mod+2 workspace $workspace2; exec invert_colors_osx
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
