--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -24,6 +24,10 @@ Host clydesdale
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
+Host iport-hatter
+  HostName 127.0.0.1
+  Port 2222
+
 Host port-aluminum
   HostName 127.0.0.1
   Port 8010
