--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -71,6 +71,9 @@ Host 172.31.255.1
 Host excel-*.rapidnotify.com
   User pairprogramming
 
+Host tms-1.rapidnotify.com
+  User pairprogramming
+
 Host *.rapidnotify.com
   User prodrun
 
