--- a/common/.ansible.cfg
+++ b/common/.ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 transport=ssh
 forks=25
-inventory= /home/wwalker/etc/ansible_hosts
+inventory=/home/wwalker/etc/ansible_hosts
 
 [ssh_connection]
 ssh_args=""
