--- a/common/.i3/config
+++ b/common/.i3/config
@@ -235,8 +235,8 @@ new_float normal 4
 #exec google-chrome
 #exec thunderbird
 #exec i3-sensible-terminal
-exec pidgin
-exec skype
+#exec pidgin
+#exec skype
 
 # Wayne's changes
 bindsym $mod+X exec xrandr-invert-colors
