--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -68,6 +68,9 @@ Host ut.eclipsing.com
 Host 172.31.255.1
   ConnectTimeout 888
 
+Host excel-3.rapidnotify.com
+  User prodrun
+
 Host excel-*.rapidnotify.com
   User pairprogramming
 
