--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -48,6 +48,10 @@ Host port-cracker
   HostName 127.0.0.1
   Port 8014
 
+Host port-uranium
+  HostName 127.0.0.1
+  Port 8016
+
 Host clydesdale
   HostName 172.18.15.242
 
