--- a/common/.gitconfig
+++ b/common/.gitconfig
@@ -26,7 +26,7 @@
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso
 	who = shortlog -s --
 [github]
-	user = dwingo
+	user = WingoD
 [push]
   default = current
 [pull]
