--- a/common/.gitconfig
+++ b/common/.gitconfig
@@ -25,6 +25,7 @@
 	co = checkout
 	df = diff
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso
+  lga = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso --all
 	who = shortlog -s --
 [github]
 	user = wwalker
