--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -12,6 +12,9 @@ ConnectTimeout 90
 #  StrictHostKeyChecking no
 #  ConnectTimeout 15
 
+Host *.indeed.net
+  ConnectTimeout 5
+
 Host clydesdale
   HostName 172.16.99.19
   ConnectTimeout 10
