--- a/common/.gitconfig
+++ b/common/.gitconfig
@@ -23,6 +23,7 @@
 	ci = commit
 	br = branch
 	co = checkout
+	com = checkout master
 	df = diff
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso
   lga = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso --all
