--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -97,7 +97,7 @@ Host *
   User wwalker
   ConnectTimeout 10
   ControlPath ~/.ssh/master-%r@%h:%p
-  ControlPersist yes
+  #ControlPersist yes
   ControlMaster auto
   GSSAPIAuthentication no
   ServerAliveCountMax 5
