--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -59,6 +59,8 @@ Host port-uranium
   HostName 127.0.0.1
   Port 8016
 
+Host uranium
+  HostName 172.16.16.41
 
 Host neutronium
   HostName 172.16.16.30
