--- a/common/.i3/config
+++ b/common/.i3/config
@@ -242,6 +242,8 @@ new_float normal 4
 #exec skype
 
 # Wayne's changes
+bindsym Shift+$mod+H exec hd
+bindsym $alt+Shift+$mod+H exec 4k
 bindsym $mod+X exec xrandr-invert-colors
 bindsym $mod+J exec xrandr-invert-colors -s 1
 bindsym $mod+K exec xrandr-invert-colors -s 0
