--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -8,25 +8,6 @@ ConnectTimeout 90
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
-#Host ec2-*
-#  StrictHostKeyChecking no
-#  ConnectTimeout 15
-
-Host *.indeed.net
-  ConnectTimeout 5
-
-Host clydesdale
-  HostName 172.16.99.19
-  ConnectTimeout 10
-  ServerAliveCountMax 5
-  ServerAliveInterval 15
-
-#Host github.com-wwalkerbr
-#    HostName github.com
-#    User git
-#    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
-#    IdentitiesOnly yes
-
 Host iport-hatter
   HostName 127.0.0.1
   Port 2222
@@ -65,13 +46,13 @@ Host uranium
 Host neutronium
   HostName 172.16.16.30
 
+Host cracker
+  HostName 172.16.16.34
+
 Host ut.eclipsing.com
   ConnectTimeout 8
   ServerAliveCountMax 5
   ServerAliveInterval 5
-
-Host 172.31.255.1
-  ConnectTimeout 888
 
 Host excel-3.rapidnotify.com
   User prodrun
@@ -88,11 +69,7 @@ Host *.rapidnotify.com
 Host *.vpn.bybent.com
   User root
 
-Host nagios.solid-constructs.com
-  ForwardAgent yes
-
-Host cracker
-  HostName 172.16.16.34
+Host *.solid-constructs.com
   ForwardAgent yes
 
 Host *
