--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -6,7 +6,7 @@ bind-key DC send-prefix
 #status bar
 set-option -g xterm-keys on
 set-option -g history-limit 100000
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 set-option -g status-justify left
 set-option -g status-bg default
 set-option -g status-fg white
