--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -49,6 +49,9 @@ Host neutronium
 Host cracker
   HostName 172.16.16.34
 
+Host shovel
+  HostName 192.168.157.146
+
 Host ut.eclipsing.com
   ConnectTimeout 8
   ServerAliveCountMax 5
@@ -81,3 +84,4 @@ Host *
   GSSAPIAuthentication no
   ServerAliveCountMax 5
   ServerAliveInterval 5
+  PasswordAuthentication=no
