--- a/common/.i3/config
+++ b/common/.i3/config
@@ -257,6 +257,7 @@ bindsym $alt+F4 kill
 
 bindsym $alt+Control+C exec google-chrome
 bindsym $alt+Control+M exec thunderbird
+bindsym $alt+Control+E exec ejectejecteject
 bindsym $alt+Control+F exec firefox
 bindsym $alt+Control+T exec xterm
 bindsym $alt+Control+S exec skype
