--- a/common/.ssh/config
+++ b/common/.ssh/config
@@ -8,6 +8,9 @@ ConnectTimeout 90
 #    IdentityFile /home/wwalker/.ssh/id_rsa-wwalkerbr
 #    IdentitiesOnly yes
 
+Host nitrile
+  Port 20022
+
 Host iport-hatter
   HostName 127.0.0.1
   Port 2222
