--- a/common/.i3/config
+++ b/common/.i3/config
@@ -49,6 +49,7 @@ bindsym Shift+Control+$alt+$mod+t split v; exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Control+q kill
 bindsym $alt+Control+w kill
+bindsym $alt+F4 kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
@@ -105,7 +106,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+b focus child
 
 set $workspace1 "  1   "
 set $workspace2 "  2   "
@@ -151,26 +152,26 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+  # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+  # Pressing left will shrink the window’s width.
+  # Pressing right will grow the window’s width.
+  # Pressing up will shrink the window’s height.
+  # Pressing down will grow the window’s height.
+  bindsym h resize shrink width 10 px or 10 ppt
+  bindsym j resize grow height 10 px or 10 ppt
+  bindsym k resize shrink height 10 px or 10 ppt
+  bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+  # same bindings, but for the arrow keys
+  bindsym Left resize shrink width 10 px or 10 ppt
+  bindsym Down resize grow height 10 px or 10 ppt
+  bindsym Up resize shrink height 10 px or 10 ppt
+  bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
@@ -183,34 +184,34 @@ for_window [title="Whisker Menu"] floating enable; border none; focus mode_toggl
 #for_window [class="Xfdesktop"] border none;
 
 bar {
-	# tray_output none
+  # tray_output none
 
-	workspace_buttons yes
+  workspace_buttons yes
 
-	#font pango:DejaVu Sans Mono 10
+  #font pango:DejaVu Sans Mono 10
 
-	#mode dock
-	position bottom
-	#status_command i3status --config ~/.i3/i3status.conf
-	status_command ~/.i3/i3-conky.sh main
+  #mode dock
+  position bottom
+  #status_command i3status --config ~/.i3/i3status.conf
+  status_command ~/.i3/i3-conky.sh main
 }
 
 #secondary
 #bar {
-#	tray_output none
-#	workspace_buttons no
-#	position bottom
-#	#status_command i3status --config ~/.i3/i3status.conf
-#	status_command ~/.i3/i3-conky.sh alt
+#  tray_output none
+#  workspace_buttons no
+#  position bottom
+#  #status_command i3status --config ~/.i3/i3status.conf
+#  status_command ~/.i3/i3-conky.sh alt
 #}
 
 #bar {
 #font pango:DejaVu Sans Mono 11#
-#	workspace_buttons yes
-#	mode dock
-#	position bottom
- #   #status_command i3status
-#	status_command i3status --config ~/.i3/i3status.conf
+#  workspace_buttons yes
+#  mode dock
+#  position bottom
+#  #status_command i3status
+#  status_command i3status --config ~/.i3/i3status.conf
 #}
 
 #exec --no-startup-id "/usr/bin/xcompmgr -c"
@@ -218,8 +219,8 @@ bar {
 exec --no-startup-id "/usr/bin/feh --bg-fill /home/wwalker/Pictures/black-wallpaper-28.jpg"
 
 # Wayne changes
-client.focused        #4c7899 #6688aa #ffffff #2e9ef4
-client.unfocused        #333333 #666666 #cccccc #292d2e
+client.focused #4c7899 #6688aa #ffffff #2e9ef4
+client.unfocused #333333 #666666 #cccccc #292d2e
 #for_window [window_role="pop-up"] floating enable
 #for_window [window_role="buddy_list"] floating enable, move scratchpad, scratchpad show;
 #for_window [window_role="conversation"] floating enable, move scratchpad, scratchpad show;
@@ -253,7 +254,6 @@ bindsym Control+Shift+$mod+Right move workspace to output right
 bindsym Control+Shift+$mod+Down move workspace to output down
 bindsym Control+Shift+$mod+Up move workspace to output up
 bindsym $mod+I exec invert_colors_osx
-bindsym $alt+F4 kill
 
 bindsym $alt+Control+C exec google-chrome
 bindsym $alt+Control+M exec thunderbird
